# Administration-personnel

./: .gitignore  CMakeLists.txt  README.md
src/: Employee.cpp  Employee.h  Manager.cpp  Manager.h  Personnel.cpp  Personnel.h  main.cpp
